--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "6.9.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "vite-plugin-pwa": "^0.14.7"
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.11",
