--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tailwindcss/forms": "^0.5.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "css": "^3.0.0",
     "flowbite-react": "^0.4.2",
     "moment": "^2.29.4",
+    "nano": "^10.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
