--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css": "^3.0.0",
     "cssnano": "^6.0.0",
     "flowbite-react": "^0.4.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
