--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my",
+  "name": "pixel2em",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,8 +22,6 @@
   "dependencies": {
     "@commitlint/config-conventional": "^17.4.4",
     "@tailwindcss/forms": "^0.5.3",
-    "chart.js": "^4.2.1",
-    "chartjs-adapter-moment": "^1.0.1",
     "css": "^3.0.0",
     "cssnano": "^6.0.0",
     "flowbite-react": "^0.4.2",
