--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "volta": {
+    "pnpm": "8.1.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,7 +14,8 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "husky": "husky install",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean": "rimraf node_modules && pnpm clean && pnpm install"
   },
   "husky": {
     "hooks": {
@@ -21,6 +25,8 @@
   },
   "dependencies": {
     "@commitlint/config-conventional": "^17.4.4",
+    "@swc/cli": "^0.1.61",
+    "@swc/core": "^1.3.32",
     "@tailwindcss/forms": "^0.5.3",
     "css": "^3.0.0",
     "cssnano": "^6.0.0",
@@ -29,11 +35,9 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-flatpickr": "^3.10.13",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.8.0",
     "react-router-dom": "6.9.0",
-    "react-transition-group": "^4.4.5",
+    "rimraf": "^4.4.1",
     "vite-plugin-pwa": "^0.14.7"
   },
   "devDependencies": {
@@ -45,19 +49,16 @@
     "@typescript-eslint/eslint-plugin": "5.56.0",
     "@typescript-eslint/parser": "5.56.0",
     "@vitejs/plugin-react": "3.1.0",
+    "@vitejs/plugin-react-swc": "^3.2.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.36.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "flowbite": "^1.6.4",
-    "flowbite-typography": "^1.0.3",
     "husky": "^8.0.3",
     "postcss": "8.4.21",
     "prettier": "2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "3.2.7",
     "typescript": "5.0.2",
-    "vite": "4.2.1"
+    "vite": "4.2.1",
+    "volta": "^0.0.0"
   },
   "eslintConfig": {
     "extends": [
