--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint --color .",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "husky": "husky install",
     "prepare": "husky install",
     "clean": "rimraf node_modules && pnpm clean && pnpm install"
   },
@@ -54,8 +53,7 @@
     "prettier": "2.8.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.2",
-    "vite": "4.2.1",
-    
+    "vite": "4.2.1"
   },
   "eslintConfig": {
     "extends": [
